# jwtiny

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  deny.toml  docker-compose.yaml  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: algorithm_selection.rs  claims_validation.rs  ecdsa_algorithms.rs  hmac_algorithms.rs  jwks_caching.rs  report.rs  rsa_benchmarks.rs  rsa_end_to_end.rs  rsa_jsonwebtoken_comparison.rs  rsa_signature_verification.rs  token_parsing.rs
benches/remote/: jwks_validation.rs  rocket_integration.rs
benches/validation/: rsa_validation.rs  token_size.rs
benches/validation/fixtures/: private_key_2048.pem
crates/jwtiny/: Cargo.toml
crates/jwtiny-derive/: Cargo.toml
crates/jwtiny-derive/src/: lib.rs
crates/jwtiny/benches/: fixtures.rs  validation_benchmark.rs
crates/jwtiny/benches/fixtures/: ecdsa256.pem  ecdsa384.pem  ecdsa521.pem  rsa2048.pem  rsa3072.pem  rsa4096.pem  rsa8192.pem
crates/jwtiny/examples/: axum.rs  rocket.rs
crates/jwtiny/src/: algorithm.rs  claims.rs  discovery.rs  error.rs  header.rs  lib.rs  limits.rs  url.rs  validator.rs
crates/jwtiny/src/jwks/: caching.rs  jwk.rs  mod.rs
crates/jwtiny/src/utils/: base64url.rs  bounds.rs  der.rs  mod.rs
crates/jwtiny/tests/: cross_validation.rs  remote.rs  signature_parity.rs  static.rs
crates/jwtiny/tests/parity/: mod.rs  token_gen.rs  validators.rs
crates/jwtype/: Cargo.toml
crates/jwtype/src/: lib.rs
examples/: basic.rs  multi_algorithm.rs  poem.rs  warp.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/poem/: Cargo.toml
examples/poem/src/: main.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: main.rs
examples/warp/: Cargo.toml
examples/warp/src/: main.rs
scripts/: check-compile-version.sh  measure-bundle-size.sh  run-all-tests-detailed.sh  run-all-tests.sh  run-benchmarks.sh  run-integration-tests.sh  run-quick-tests.sh
src/: error.rs  lib.rs  validator.rs
src/algorithm/: ecdsa.rs  hmac.rs  mod.rs  rsa.rs  traits.rs
src/claims/: mod.rs  validator.rs
src/discovery/: discovery.rs  mod.rs
src/jwks/: jwk.rs  jwks.rs  mod.rs  resolver.rs
src/keys/: mod.rs
src/remote/: config.rs  http.rs  mod.rs  test_helper.rs
src/token/: header.rs  mod.rs  parsed.rs  token.rs  trusted.rs  validated.rs  verified.rs
src/utils/: base64url.rs  der.rs  mod.rs
tests/: additional_validations.rs  algorithm_round_trips.rs  custom_headers.rs  cve_protection_tests.rs  edge_cases.rs  jwk_support.rs  jwkserve_integration.rs  jwtio_compatibility.rs  key_formats.rs  remote.rs
