[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Sebastian Müller <mail@sbstjn.com>"]
categories = ["authentication", "development-tools", "security"]
description = "Minimal JWT validation library for build web services"
documentation = "https://docs.rs/jwtiny"
edition = "2024"
homepage = "https://github.com/sbstjn/jwtiny"
keywords = ["api", "authentication", "jwks", "jwt", "token"]
license = "MIT"
repository = "https://github.com/sbstjn/jwtiny"
rust-version = "1.85.0"
version = "0.0.0"

[workspace.dependencies]
jwtiny = { path = "crates/jwtiny" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true