[package]
name = "jwtiny-example-rocket"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

jwtiny = { workspace = true }
jwtype = { workspace = true }
reqwest = { workspace = true }
moka = { workspace = true }
miniserde = "0.1.43"

