[package]
name = "jwtiny-example-warp"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
warp = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

jwtiny = { workspace = true }
reqwest = { workspace = true }
moka = { workspace = true }

